@@ -197,7 +197,7 @@ public class WCAGContext
                 // If the ruleid is not defined in FAILS_ON_RULE,
                 // the default behavior will be to add it to the fails.
                 // In order to resolve these test-suite fails quickly, set them as "false" in FAILS_ON_RULE.
-                .collect(Collectors.toList());
+                .toList();
             this.failCount = numberOfChecks(failingViolations);
             if (this.failCount != 0) {
                 this.failReport = AbstractXWikiCustomAxeReporter.getReadableAxeResults(testMethodName, pageClassName,
@@ -207,7 +207,7 @@ public class WCAGContext
             List<Rule> warningViolations = axeResults.getViolations()
                 .stream()
                 .filter(rule -> FAILS_ON_RULE.containsKey(rule.getId()) && !FAILS_ON_RULE.get(rule.getId()))
-                .collect(Collectors.toList());
+                .toList();
             this.warnCount = numberOfChecks(warningViolations);
             if (this.warnCount != 0) {
                 this.warnReport = AbstractXWikiCustomAxeReporter.getReadableAxeResults(testMethodName, pageClassName,
